# ttid

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release-plz.yml
docs/: spec.md
examples/: basic.rs
src/: deser.rs  error.rs  lib.rs
